cluster/apps/default/paperless-ngx/app/tika-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-tika
  namespace: default
spec:
  selector:
    matchLabels:
      app: paperless-tika
  template:
    metadata:
      labels:
        app: paperless-tika
    spec:
      containers:
        - name: paperless-tika
          image: ghcr.io/paperless-ngx/tika:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 9998
