cluster/apps/default/paperless-ngx/app/app-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-app-ingress-route
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`paperless.cornwater.net`)
      services:
        - name: paperless-app-svc
          port: 8000
